--- a/resources/views/home.edge
+++ b/resources/views/home.edge
@@ -4,12 +4,34 @@
 <head>
     <meta charset="UTF-8" />
     <title>Hello NotesGate</title>
-    {{ style('assets/global/css/bootstrap.css') }}
+    {{ style('assets/theme/css/bootstrap.css') }}
+    {{ style('assets/global/css/media.css') }}
+    {{ style('assets/global/css/app.css') }}
+    {{ style('assets/global/css/component.css') }}
 </head>
 
 <body>
+    <nav class="navbar navbar-light bg-light col-lg-12">
+        <a class="navbar-brand col-lg-1">Navbar</a>
+        <div class="col-lg-10">
+            <div class="row">
+                <div class="col-lg-7">
+                    <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+                </div>
+                <div class="col-lg-5 padding-left-120px">
+                    <div class="row">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </nav>
     <div class="container-fluid">
-        <div class="col-lg-12 col-md-9 col-xl-8 py-md-3 pl-md-5">
+        <div class="col-lg-12">
             <div class="card-columns">
                 <div class="card">
                     <svg class="bd-placeholder-img card-img-top" width="100%" height="160"
@@ -118,6 +140,10 @@
 
         </div>
     </div>
+
+
+    {{ script('assets/theme/js/jquery-3.js') }}
+    {{ script('assets/theme/js/bootstrap.js') }}
 
 </body>
 
