--- a/public/assets/global/css/media.css
+++ b/public/assets/global/css/media.css
@@ -1,3 +1,9 @@
+/* navbar */
+
+/* end navbar */
+
+
+/* card coloum post  --------------------------- */
 @media (min-width: 576px) {
 	.card-columns {
 		-webkit-column-count: 3;
@@ -37,15 +43,6 @@
 	}
 }
 
-@media (min-width: 1200px) {
-	.card-columns {
-		-webkit-column-count: 6;
-		-moz-column-count: 6;
-		column-count: 6;
-		-webkit-column-gap: 1.25rem;
-		-moz-column-gap: 1.25rem;
-		column-gap: 1.25rem;
-		orphans: 1;
-		widows: 1;
-	}
-}
+
+
+/* end card coloum post  --------------------------- */
