--- a/public/assets/global/css/media.css
+++ b/public/assets/global/css/media.css
@@ -1,10 +1,95 @@
-/* navbar */
+/* left side and content ----------------------- */
+@media (min-width: 240px) {
+	#sidebar {
+		width: 20%;
+	}
 
-/* end navbar */
+	#content {
+		width: 80%;
+	}
+}
+
+@media (min-width: 360px) {
+	#sidebar {
+		width: 15%;
+	}
+
+	#content {
+		width: 85%;
+	}
+}
+
+@media (min-width: 490px) {
+	#sidebar {
+		width: 12%;
+	}
+
+	#content {
+		width: 88%;
+	}
+}
+
+@media (min-width: 790px) {
+	#sidebar {
+		width: 8%;
+	}
+
+	#content {
+		width: 92%;
+	}
+}
+
+@media (min-width: 960px) {
+	#sidebar {
+		width: 7%;
+	}
+
+	#content {
+		width: 93%;
+	}
+}
+
+@media (min-width: 1200px) {
+	#sidebar {
+		width: 5%;
+	}
+
+	#content {
+		width: 95%;
+	}
+}
+
+/* end left side and content ----------------------- */
 
 
 /* card coloum post  --------------------------- */
-@media (min-width: 576px) {
+@media (min-width: 360px) {
+	.card-columns {
+		-webkit-column-count: 1;
+		-moz-column-count: 1;
+		column-count: 1;
+		-webkit-column-gap: 1.25rem;
+		-moz-column-gap: 1.25rem;
+		column-gap: 1.25rem;
+		orphans: 1;
+		widows: 1;
+	}
+}
+
+@media (min-width: 480px) {
+	.card-columns {
+		-webkit-column-count: 2;
+		-moz-column-count: 2;
+		column-count: 2;
+		-webkit-column-gap: 1.25rem;
+		-moz-column-gap: 1.25rem;
+		column-gap: 1.25rem;
+		orphans: 1;
+		widows: 1;
+	}
+}
+
+@media (min-width: 768px) {
 	.card-columns {
 		-webkit-column-count: 3;
 		-moz-column-count: 3;
@@ -17,7 +102,7 @@
 	}
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
 	.card-columns {
 		-webkit-column-count: 4;
 		-moz-column-count: 4;
@@ -30,7 +115,7 @@
 	}
 }
 
-@media (min-width: 992px) {
+@media (min-width: 1240px) {
 	.card-columns {
 		-webkit-column-count: 5;
 		-moz-column-count: 5;
@@ -42,7 +127,5 @@
 		widows: 1;
 	}
 }
-
-
 
 /* end card coloum post  --------------------------- */
