ubah leftbar menjadi element - parsial - main

--- a/resources/views/user/home.edge
+++ b/resources/views/user/home.edge
@@ -118,5 +118,6 @@
 </div>
 @endsection
 @section('script')
+{{ script('assets/components/searchbar/js/searchbar.js') }}
 {{ script('assets/components/card-note/js/card-note.js') }}
 @endsection
