--- a/public/assets/components/leftbar/css/style-app.css
+++ b/public/assets/components/leftbar/css/style-app.css
@@ -37,3 +37,27 @@ a:focus {
 #web-content {
 	display: inline-flex;
 }
+
+#notesgate {
+	width: 100%;
+	height: 10%;
+	background-color: #fff;
+}
+
+.buttons-editor-menu {
+	width: 100%;
+	height: 60%;
+	table-layout: fixed;
+	border-collapse: collapse;
+}
+
+.spawn-tbody {
+	width: 100%;
+	height: 20%;
+}
+
+
+.buttons-editor-menu button {
+	width: 100%;
+	height: 40px;
+}
