--- a/public/assets/components/right-menu/css/right-menu.css
+++ b/public/assets/components/right-menu/css/right-menu.css
@@ -1,21 +1,39 @@
 #right-menu {
-	right: -15%;
+	right: -5%;
 	top: 0px;
 	position: fixed;
-	width: 15%;
+	width: 5%;
 	height: 100vh;
 	transition: right 0.5s;
 	background-color: rgb(228, 14, 14);
 }
 
+.buttons-editor-menu {
+	width: 100%;
+	height: 60%;
+	table-layout: fixed;
+	border-collapse: collapse;
+}
+
+.spawn-tbody {
+	width: 100%;
+	height: 20%;
+}
+
+
+.buttons-editor-menu button {
+	width: 100%;
+	height: 40px;
+}
+
 @media (min-width: 240px) {
 	#right-menu {
-		width: 20%;
+		width: 8%;
 	}
 }
 
 @media (min-width: 960px) {
 	#right-menu {
-		width: 15%;
+		width: 5%;
 	}
 }
