--- a/public/assets/global/css/app.css
+++ b/public/assets/global/css/app.css
@@ -1,3 +1,12 @@
+html,
+body {
+	width: 100%;
+	height: 100%;
+
+	padding: 0;
+	margin: 0;
+}
+
 .width-full {
 	width: 100%;
 }
@@ -14,7 +23,19 @@
 	background-color: #fafafa !important;
 }
 
+.text-content {
+	word-wrap: break-word;
+	word-break: break-all;
+}
 
+[contenteditable]:focus {
+	outline: 0px solid transparent;
+}
+
+#web-content {
+	width: 100%;
+	height: 100%;
+}
 
 #content-page {
 	margin-top: 5%;
