--- a/resources/views/layout/main.edge
+++ b/resources/views/layout/main.edge
@@ -17,46 +17,13 @@
 
 <body>
 	<div id=web-content class="wrapper">
-		<nav id="sidebar" class="active">
-			<div class="sidebar-header">
-				<h3>Bootstrap Sidebar</h3>
-				<strong>BS</strong>
-			</div>
-
-			<ul class="list-unstyled">
-				<li>
-					<a href="#">
-						<i class="fas fa-briefcase"></i>
-						About
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<i class="fas fa-image"></i>
-						Portfolio
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<i class="fas fa-question"></i>
-						FAQ
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<i class="fas fa-paper-plane"></i>
-						Contact
-					</a>
-				</li>
-			</ul>
-		</nav>
+		@include('layout._leftbar')
 		@!section('content')
-
 	</div>
 
 	{{ script('assets/theme/js/jquery-3.js') }}
 	{{ script('assets/theme/js/bootstrap.js') }}
-	{{ script('assets/components/searchbar/js/searchbar.js') }}
+
 	@!section('script')
 
 </body>
