--- a/resources/views/user/write.edge
+++ b/resources/views/user/write.edge
@@ -8,12 +8,10 @@
 <div id="content">
 	<div class="col-lg-8 col-md-10 col-sm-10 align-center">
 		<div class="jumbotron color-white">
-			<h1 class="display-4">Hello, world!</h1>
-			<p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention
-				to
-				featured content or information.</p>
-			<hr class="my-4">
-			<p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+			<h1 class="text-content display-4" contenteditable="true">Title</h1>
+			<p class="text-content lead" contenteditable="true">#lable</p>
+			<hr class="my-2">
+			<p class="text-content " contenteditable="true">Description</p>
 			<button type="button" id="sidebarCollapse" class="btn btn-info">
 				<span>Toggle Sidebar</span>
 			</button>
