add editable text

--- a/resources/views/layout/main.edge
+++ b/resources/views/layout/main.edge
@@ -23,6 +23,7 @@
 
 	{{ script('assets/theme/js/jquery-3.js') }}
 	{{ script('assets/theme/js/bootstrap.js') }}
+	{{ script('assets/global/js/app.js') }}
 
 	@!section('script')
 
