upadete view and roure

--- a/resources/views/layout/_leftbar.edge
+++ b/resources/views/layout/_leftbar.edge
@@ -5,7 +5,7 @@
 	<table class=buttons-editor-menu>
 		<tbody>
 			<tr>
-				<td><a href="/write" type="button">write</a></td>
+				<td><a href="/note/write" type="button">write</a></td>
 			</tr>
 			<tr>
 				<td><a href="/board" type="button">Board</a></td>
