--- a/resources/views/user/login.edge
+++ b/resources/views/user/login.edge
@@ -18,7 +18,7 @@
 <body>
 	<div class="login-card col-lg-3 col-md-5 col-sm-3">
 		<div class="">
-			<form method="POST" action="store">
+			<form method="POST" action="{{route('/login/store')}}">
 				{{csrfField()}}
 
 				<div class="form-group">
