--- a/resources/views/user/login.edge
+++ b/resources/views/user/login.edge
@@ -22,11 +22,12 @@
 				{{csrfField()}}
 
 				<div class="form-group">
-					<label for="exampleInputEmail1">Email address</label>
-					<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" </div>
-						<div class="form-group">
-					<label for="exampleInputPassword1">Password</label>
-					<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+					<label for="email">Email address</label>
+					<input name=email type="email" class="form-control" aria-describedby="email" placeholder="Email">
+				</div>
+				<div class="form-group">
+					<label for="password">Password</label>
+					<input name=password type="password" class="form-control" placeholder="Password">
 				</div>
 				<button type="submit" class="btn btn-primary">Submit</button>
 			</form>
