--- a/public/assets/global/css/component.css
+++ b/public/assets/global/css/component.css
@@ -7,3 +7,18 @@
 
 	margin-left: auto;
 }
+
+.single-card {
+	margin: auto;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+
+	transform: translate(-50%, -50%);
+
+}
+
+.full {
+	width: inherit !important;
+	height: inherit !important;
+}
