--- a/resources/views/user/home.edge
+++ b/resources/views/user/home.edge
@@ -4,117 +4,33 @@
 @endsection
 @section('content')
 <div id="content">
-    @include('layout._searchbar')
+	@include('layout._searchbar')
 
-    <div id="content-page" class="container-fluid">
-        <div class="col-lg-12">
-            <div class="card-columns">
-                <div id="note-1" data-note='{"id":"1","text":"1"}' onclick="read(this)" class="card">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="160"
-                        xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false"
-                        role="img" aria-label="Placeholder: Image cap">
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6"
-                            dy=".3em">Image cap</text>
-                    </svg>
-                    <div class="card-body">
-                        <h5 class="card-title">Card title that wraps to a new line</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural
-                            lead-in
-                            to
-                            additional content. This content is a little bit longer.</p>
-                    </div>
-                </div>
-                <div id="note-2" data-note='{"id":"1","text":"1"}' onclick="read(this)" class="card p-3">
-                    <blockquote class="blockquote mb-0 card-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
-                        </p>
-                        <footer class="blockquote-footer">
-                            <small class="text-muted">
-                                Someone famous in <cite title="Source Title">Source Title</cite>
-                            </small>
-                        </footer>
-                    </blockquote>
-                </div>
-                <div id="note-3" data-note='{"id":"1","text":"1"}' onclick="read(this)" class="card">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="160"
-                        xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false"
-                        role="img" aria-label="Placeholder: Image cap">
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6"
-                            dy=".3em">Image cap</text>
-                    </svg>
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to
-                            additional
-                            content.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                </div>
-                <div id="note-4" data-note='{"id":"1","text":"1"}' onclick="read(this)"
-                    class="card bg-primary text-white text-center p-3">
-                    <blockquote class="blockquote mb-0">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
-                        <footer class="blockquote-footer text-white">
-                            <small>
-                                Someone famous in <cite title="Source Title">Source Title</cite>
-                            </small>
-                        </footer>
-                    </blockquote>
-                </div>
-                <div id="note-5" data-note='{"id":"1","text":"1"}' onclick="read(this)" class="card text-center">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This card has a regular title and short paragraphy of text below
-                            it.
-                        </p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                </div>
-                <div id="note-6" data-note='{"id":"1","text":"1"}' onclick="read(this)" class="card">
-                    <svg class="bd-placeholder-img card-img" width="100%" height="260"
-                        xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false"
-                        role="img" aria-label="Placeholder: Card image">
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6"
-                            dy=".3em">Card image</text>
-                    </svg>
-                </div>
-                <div id="note-7" data-note='{"id":"1","text":"1"}' onclick="read(this)" class="card p-3 text-right">
-                    <blockquote class="blockquote mb-0">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
-                        </p>
-                        <footer class="blockquote-footer">
-                            <small class="text-muted">
-                                Someone famous in <cite title="Source Title">Source Title</cite>
-                            </small>
-                        </footer>
-                    </blockquote>
-                </div>
-                <div id="note-8" data-note='{"id":"1","text":"1"}' onclick="read(this)" class="card">
-                    <svg class="bd-placeholder-img card-img" width="100%" height="260"
-                        xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false"
-                        role="img" aria-label="Placeholder: Card image">
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6"
-                            dy=".3em">Card image</text>
-                    </svg>
-                </div>
-                <div id="note-9" data-note='{"id":"1","text":"1"}' onclick="read(this)" class="card p-3 text-right">
-                    <blockquote class="blockquote mb-0">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
-                        </p>
-                        <footer class="blockquote-footer">
-                            <small class="text-muted">
-                                Someone famous in <cite title="Source Title">Source Title</cite>
-                            </small>
-                        </footer>
-                    </blockquote>
-                </div>
-            </div>
-        </div>
-    </div>
+	<div id="content-page" class="container-fluid">
+		<div class="col-lg-12">
+			<div id="card-post" class="card-columns">
+				@each(post in notes)
+				<div id="{{post._id}}" data-note='{{post}}' onclick="read(this)" class="card">
+					<svg class="bd-placeholder-img card-img-top" width="100%" height="160"
+						xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false"
+						role="img" aria-label="Placeholder: Image cap">
+						<title>Placeholder</title>
+						<rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6"
+							dy=".3em">Image cap</text>
+					</svg>
+					<div class="card-body">
+						<h5 class="card-title">Card title that wraps to a new line</h5>
+						<p class="card-text">This is a longer card with supporting text below as a natural
+							lead-in
+							to
+							additional content. This content is a little bit longer.</p>
+					</div>
+				</div>
+				@endeach
+
+			</div>
+		</div>
+	</div>
 </div>
 @endsection
 @section('script')
