--- a/resources/views/layout/main.edge
+++ b/resources/views/layout/main.edge
@@ -12,6 +12,9 @@
 	{{ style('assets/components/leftbar/css/style-app.css') }}
 	{{ style('assets/components/searchbar/css/searchbar.css') }}
 	{{ style('assets/global/css/media.css') }}
+	{{--  {{ style('assets/theme/css/fa-icon/all.css') }}  --}}
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
 	@!section('style')
 </head>
 
