--- a/resources/views/user/login.edge
+++ b/resources/views/user/login.edge
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>NotesGate | Login </title>
+	<title>{{title}}</title>
 	{{ style('assets/theme/css/bootstrap.css') }}
 	{{ style('assets/global/css/app.css') }}
 	{{ style('assets/global/css/component.css') }}
