--- a/resources/views/user/write.edge
+++ b/resources/views/user/write.edge
@@ -74,7 +74,7 @@
 				<tr>
 					<td>
 
-						<div data-flag="show" onclick="fontStyle(this)" type="button">A</div>
+						<div id="menu-a" data-flag="show" onclick="fontStyle(this)" type="button">A</div>
 
 					</td>
 				</tr>
